# graphene-example

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
compose/: kolo-config.toml
compose/nginx/: nginx.conf
compose/otel-collector/: collector.yml
compose/prometheus/: prometheus.yml
src/config/: asgi.py  config.py  opentelemetry.py  urls.py
src/config/settings/: base.py  local.py
src/core/: apps.py  custom_node.py  dataloaders.py  fields.py  models.py  schemas.py  utils.py
src/core/management/commands/: populate_db.py
src/core/migrations/: 0001_initial.py  0002_deployedapp.py  0003_plan_type.py  0004_alter_user_plan.py
src/fixtures/: initial-data.json  mailer-data.json
src/mailer/: dataloaders.py  models.py  schemas.py  utils.py  views.py
src/mailer/management/commands/: generate_email_events.py
src/mailer/migrations/: 0001_initial.py  0002_emailprovider_from_address_and_more.py  0003_emailprovider_maxed_quota.py  0003_emailprovider_maxed_quota_squashed_0004_remove_emailprovider_maxed_quota_and_more.py  0004_remove_emailprovider_maxed_quota_and_more.py
src/mailer/smtp_providers/: __init__.py  mailersend.py  smtp2go.py  smtp_provider.py
